# ecs_box2d

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.txt
build_tools/: prereqps.ps1  prereqps.sh
resources/: resources.json
scripts/: clean.sh  patch.txt  prereqps.ps1  prereqps.sh
src/: coordinates.cpp  coordinates.h  events.h  glfw++.cpp  glfw++.h  main.cpp  mainwindow.cpp  mainwindow.h  resourcemanager.cpp  resourcemanager.h  sfmldebugdraw.cpp  sfmldebugdraw.h
src/components/: body.h  control.h  physics.h  renderable.h
src/systems/: bodysystem.cpp  bodysystem.h  box2dsystem.cpp  box2dsystem.h  controlsystem.cpp  controlsystem.h  rendersystem.cpp  rendersystem.h
